--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -850,6 +850,8 @@ input.sheet-module-roll:checked ~ .sheet-wrapper .sheet-module-off-roll,
 .sheet-ranged-attacks .sheet-col1 .sheet-tooltip { margin-left: -40px; }
 .sheet-encumberance .sheet-tooltip { margin-left: -40px; }
 .sheet-row-totals .sheet-tooltip { margin-left: 10px; }
+
+/* ---- POINT SUMMARY ---- */
 .sheet-points .sheet-tooltip { margin-left: -310px; }
 .sheet-spells .sheet-col11 .sheet-tooltip { margin-left: -150px; }
 .sheet-spells .sheet-col12 .sheet-tooltip { margin-left: -200px; }
@@ -857,6 +859,42 @@ input.sheet-module-roll:checked ~ .sheet-wrapper .sheet-module-off-roll,
 .sheet-points .sheet-cell .sheet-tooltip {
     margin-left: -290px;
     width: 246px;
+}
+
+.sheet-points .sheet-cell.sheet-title {
+    width: 100%;
+    text-align: center;
+    font-weight: bold;
+}
+
+/* Show GCA fields, hide GCS and all */
+.sheet-points input.sheet-point-summary-layout[value="1"] ~ .sheet-gca {
+    display: block;
+}
+
+.sheet-points input.sheet-point-summary-layout[value="1"] ~ .sheet-gcs,
+.sheet-points input.sheet-point-summary-layout[value="1"] ~ .sheet-all {
+    display: none;
+}
+
+/* Show GCS fields, hide GCA and all */
+.sheet-points input.sheet-point-summary-layout[value="2"] ~ .sheet-gcs {
+    display: block;
+}
+
+.sheet-points input.sheet-point-summary-layout[value="2"] ~ .sheet-gca,
+.sheet-points input.sheet-point-summary-layout[value="2"] ~ .sheet-all {
+    display: none;
+}
+
+/* Show ALL fields, hide GCA and GCS */
+.sheet-points input.sheet-point-summary-layout[value="3"] ~ .sheet-all {
+    display: block;
+}
+
+.sheet-points input.sheet-point-summary-layout[value="3"] ~ .sheet-gca,
+.sheet-points input.sheet-point-summary-layout[value="3"] ~ .sheet-gcs {
+    display: none;
 }
 
 .sheet-thrown-object {
@@ -920,7 +958,21 @@ input.sheet-module-roll:checked ~ .sheet-wrapper .sheet-module-off-roll,
     color: #404040;
 }
 
-.sheet-stats { width: 180px; height: 489px;}
+.sheet-stats { width: 180px; }
+
+/* base height on selected point summary layout */
+input.sheet-box-stats-notes-point-summary[value="1"] + div { 
+    height: 487px;
+}
+
+input.sheet-box-stats-notes-point-summary[value="2"] + div { 
+    height: 487px;
+}
+
+input.sheet-box-stats-notes-point-summary[value="3"] + div { 
+    height: 559px;
+}
+
 .sheet-stats input { font-size: 13px;}
 .sheet-stats .sheet-header .sheet-col0 { width: 72px; }
 .sheet-stats .sheet-header .sheet-col1 { width: 41px; }
@@ -970,6 +1022,7 @@ input.sheet-module-roll:checked ~ .sheet-wrapper .sheet-module-off-roll,
 
 /* General Tab: Notes Box */
 .sheet-general-notes-box {width: calc(100% - 180px - 180px - 100px - 1.6em);}
+
 .sheet-general-notes-box .sheet-cell-col-100 {
     box-sizing: border-box;
     float: left;
@@ -977,14 +1030,28 @@ input.sheet-module-roll:checked ~ .sheet-wrapper .sheet-module-off-roll,
     width: 100%;
     margin: 0;
 }
+
 .sheet-general-notes-box .sheet-header .sheet-cell {
     padding-left: 6px;
 }
+
 .sheet-general-notes-box .sheet-cell-col-100 textarea { 
     width: 100%;
-    height: 253px;
     padding: 0;
     margin: 0;
+}
+
+/* base height on selected point summary layout */
+.sheet-general-notes-box .sheet-cell-col-100 input.sheet-general-tab-notes-point-summary[value="1"] + textarea { 
+    height: 251px;
+}
+
+.sheet-general-notes-box .sheet-cell-col-100 input.sheet-general-tab-notes-point-summary[value="2"] + textarea { 
+    height: 251px;
+}
+
+.sheet-general-notes-box .sheet-cell-col-100 input.sheet-general-tab-notes-point-summary[value="3"] + textarea { 
+    height: 323px;
 }
 
 .sheet-points { width: 100px; }
@@ -1094,9 +1161,10 @@ input.sheet-toggle-unspoint-points[value="0"] ~ .sheet-row-total {
 .sheet-movement-feats { width: calc(100% - 180px - 100px - 1.2em); }
 
 .sheet-movement-feats .sheet-header {
-    background: #D3E5F5;
+    font-size: 15px;
+    color: #fff;
+    background: #555;
     margin-bottom: 5px;
-    border-bottom: 1px solid black;
 }
 
 .sheet-movement-feats .sheet-colToggle { position: relative;}
@@ -1186,6 +1254,11 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
 
 /* -- repeating traits -- */
 .sheet-traits { width: calc(100% - 0.4em); }
+
+.sheet-traits .sheet-header {
+    background: #f0f0f0;
+}
+
 .sheet-traits .sheet-col0 { width: calc(100% - 137px); }
 .sheet-traits .sheet-col0 input { text-align:left; }
 .sheet-traits .sheet-col1 { width: 25px; }
@@ -1212,6 +1285,11 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
 
 /* -- repeating disadvantages -- */
 .sheet-disadvantages { width: calc(100% - 0.4em); }
+
+.sheet-disadvantages .sheet-header {
+    background: #f0f0f0;
+}
+
 .sheet-disadvantages .sheet-col0 { width: calc(100% - 137px); }
 .sheet-disadvantages .sheet-col0 input { text-align:left; }
 .sheet-disadvantages .sheet-col1 { width: 25px; }
@@ -1238,8 +1316,28 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
 
 /* -- repeating racial traits -- */
 .sheet-racial { width: calc(100% - 0.4em); }
+
+.sheet-racial .sheet-header {
+    background: #f0f0f0;
+}
+
 .sheet-racial .sheet-col0 { width: calc(100% - 137px); }
-.sheet-racial .sheet-col0 input { text-align:left; }
+
+.sheet-racial .sheet-col0 input { 
+    text-align:left; 
+}
+
+.sheet-racial .sheet-col-race { 
+    width: calc(100% - 157px); 
+    margin-left: 20px;
+}
+
+.sheet-racial .sheet-col-race input { 
+    text-align:left; 
+    width: calc(100% - 37px) !important;
+}
+
+
 .sheet-racial .sheet-col1 { width: 25px; }
 .sheet-racial .sheet-col2 { width: 22px; }
 .sheet-racial .sheet-col3 { width: 30px; }
@@ -1344,7 +1442,7 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
 }
 
 .sheet-bio-description .sheet-row-textarea textarea {
-    height: 100px;
+    height: 83px;
     margin: 0;
     padding: 2px 0 2px 2px;
 }
