--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -989,6 +989,60 @@ input.sheet-box-stats-notes-point-summary[value="3"] + div {
 .sheet-stats .sheet-row .sheet-col3 { width: 35px; }
 .sheet-stats .sheet-row-current-points .sheet-col0 { height: 24px; }
 .sheet-stats .sheet-row-current-points .sheet-col1 { width: 35px; }
+.sheet-stats .sheet-row-current-points .sheet-col2 { 
+    width: 70px; 
+}
+
+.sheet-stats .sheet-row-current-points .sheet-col2 div { 
+    text-align: center;
+    font-size: 12px;
+    font-weight: bold;
+}
+
+/* Show/Hide hit point notes */
+.sheet-stats .sheet-row-current-points .sheet-col2  input.sheet-hit-points-notes[value="0"] ~ .sheet-hit-points-halved-dodge,
+.sheet-stats .sheet-row-current-points .sheet-col2  input.sheet-hit-points-notes[value="0"] ~ .sheet-hit-points-quartered-dodge {
+	display: none;
+}
+
+.sheet-stats .sheet-row-current-points .sheet-col2  input.sheet-hit-points-notes[value="1"] ~ .sheet-hit-points-halved-dodge {
+	display: block;
+}
+
+.sheet-stats .sheet-row-current-points .sheet-col2  input.sheet-hit-points-notes[value="1"] ~ .sheet-hit-points-quartered-dodge {
+	display: none;
+}
+
+.sheet-stats .sheet-row-current-points .sheet-col2  input.sheet-hit-points-notes[value="2"] ~ .sheet-hit-points-halved-dodge {
+	display: none;
+}
+
+.sheet-stats .sheet-row-current-points .sheet-col2  input.sheet-hit-points-notes[value="2"] ~ .sheet-hit-points-quartered-dodge {
+	display: block;
+}
+
+/* Show/Hide fatigue notes */
+.sheet-stats .sheet-row-current-points .sheet-col2  input.sheet-fatigue-points-notes[value="0"] ~ .sheet-fatigue-points-halved-dodge,
+.sheet-stats .sheet-row-current-points .sheet-col2  input.sheet-fatigue-points-notes[value="0"] ~ .sheet-fatigue-points-quartered-dodge {
+	display: none;
+}
+
+.sheet-stats .sheet-row-current-points .sheet-col2  input.sheet-fatigue-points-notes[value="1"] ~ .sheet-fatigue-points-halved-dodge {
+	display: block;
+}
+
+.sheet-stats .sheet-row-current-points .sheet-col2  input.sheet-fatigue-points-notes[value="1"] ~ .sheet-fatigue-points-quartered-dodge {
+	display: none;
+}
+
+.sheet-stats .sheet-row-current-points .sheet-col2  input.sheet-fatigue-points-notes[value="2"] ~ .sheet-fatigue-points-halved-dodge {
+	display: none;
+}
+
+.sheet-stats .sheet-row-current-points .sheet-col2  input.sheet-fatigue-points-notes[value="2"] ~ .sheet-fatigue-points-quartered-dodge {
+	display: block;
+}
+
 .sheet-stats .sheet-tooltip table { text-align: left; font-size: 9px; }
 .sheet-stats .sheet-tooltip table .sheet-label { text-align: left; font-size: 9px; }
 .sheet-stats .sheet-cell {
