Stargate RPG: v01, core parts of pg1 added

--- a/Stargate-RPG/stargate.css
+++ b/Stargate-RPG/stargate.css
@@ -9,21 +9,27 @@ span{
   /*overflow: hidden;*/
 }
 
-span.sheet-bold{
+.sheet-bold{
   font-weight: 800;
   font-size: medium;
 }
 
+
 label {
-  margin: 5px 0px 5px 0px;
+  margin: 0px;
   width: 70px;
   text-transform: capitalize;
-  font-size: 1.1em;
+  font-size: 0.8em;
+  height: 
   /*overflow: hidden;*/
 }
 label.sheet-title{
   width: 130px;
   font-size: 1.3em;
+  text-align: center;
+}
+
+h3{
   text-align: center;
 }
 
@@ -44,6 +50,7 @@ input[type="text"] {
   width: auto;
 }
 
+
 input[type="number"]{
   background-color: transparent;
   border-style: none none solid none;
@@ -54,24 +61,30 @@ input[type="number"]{
   width: 40px;
 }
 
-textarea {
-  background-color: transparent;
-  background-image:
-      linear-gradient(to right, transparent 5px, transparent 5px),
-      linear-gradient(to left, transparent 5px, transparent 5px),
-      repeating-linear-gradient(transparent, transparent 20px, #030303 20px, #000 22px, transparent 21px);
-  line-height: 21px;
-  padding: 3px 10px;
-  border-style: none;
-  width: 80%;
-  height: 90%;
-  margin-bottom: 0px;
+input[type="text"].sheet-w30,
+input[type="number"].sheet-w30{
+  width: 30px;
 }
 
+input[type="text"].sheet-w40,
+input[type="number"].sheet-w40{
+  width: 40px;
+}
+
+input[type="text"].sheet-w70,
+input[type="number"].sheet-w70{
+  width: 70px;
+}
 
 input[type="checkbox"].sheet-checkbox {
   border-style: solid black;
   border-radius: 0px;
+}
+
+input[type="text"].sheet-stat,
+input[type="number"].sheet-stat{
+  font-size: 2em;
+  font-weight: bold;
 }
 
 /* highlights empty fields with light gray */
@@ -168,6 +181,8 @@ button[type="roll"].sheet-d6{
   display: flex;
   padding: 5px;
   border: 2px solid black;
+  background: white;
+  opacity: 0.85;
 }
 
 .sheet-columnflex {
@@ -217,7 +232,7 @@ button[type="roll"].sheet-d6{
 
 div.sheet-character {
   display: grid;
-  grid-gap: 1px;
+  grid-gap: 4px;
   grid-template-columns: 2fr 4fr 3fr 3fr;
   grid-template-rows: repeat(5, 2fr) 5fr 4fr;
   grid-template-areas:"name name    name    name     " 
@@ -227,10 +242,11 @@ div.sheet-character {
                       "attr skills  speed   condition"
                       "attr skills  saves   ammo     " 
                       "attr attacks attacks attacks  "; 
-  width: 750px;
+  width: 850px;
   height: 1000px;
   background-image: url(https://raw.githubusercontent.com/Anduh/roll20-character-sheets/StarGate-v01/Stargate-RPG/images/bg.png);
   background-repeat: no-repeat;
+  background-size: 700px 700px;
   background-position: center;
   background-color: grey;
 }
@@ -264,16 +280,44 @@ div.sheet-attr{
 div.sheet-attr .sheet-stat{
   background-image: url(https://raw.githubusercontent.com/Anduh/roll20-character-sheets/StarGate-v01/Stargate-RPG/images/attr.png);
   background-repeat: no-repeat;
-  background-size: 26px 26px;
-  width: 26px;
-  height: 26px;
+  background-size: 124px 113px;
+  width: 120px;
+  height: 120px;
   background-position: center;
 }
+div.sheet-attr span:not(.sheet-mod),
+div.sheet-skills span:not(.sheet-mod){
+  font-weight: bold;
+  font-size: 1.1em;
+  text-transform: uppercase;
+}
+
+div.sheet-attr span.sheet-mod,
+div.sheet-skills span.sheet-mod,
+div.sheet-prof span.sheet-mod,
+div.sheet-saves span.sheet-mod{
+  width: 25px;
+  margin-top: 4px;
+  border-style: none none solid none;
+  margin-bottom: 4px;
+  border-width: 2px;
+  text-align: center;
+}
+
 
 /* skills SECTION */
 
 div.sheet-skills{
   grid-area:skills;
+}
+
+div.sheet-skills div{
+  align-content: space-around;
+}
+
+div.sheet-skills span:not(.sheet-mod),
+div.sheet-condition span{
+  text-transform: uppercase;
 }
 
 /* hp SECTION */
@@ -282,10 +326,22 @@ div.sheet-hp{
   grid-area:hp;
 }
 
+div.sheet-hp div,
+div.sheet-prof div,
+div.sheet-ac div,
+div.sheet-speed div{
+  flex-grow: 1;
+}
+
 /* condition SECTION */
 
 div.sheet-condition{
   grid-area:condition;
+}
+
+div.sheet-condition span{
+  padding-left: 5px;
+  font-weight: bold;
 }
 
 /* prof SECTION */
@@ -298,6 +354,12 @@ div.sheet-prof{
 
 div.sheet-ac{
   grid-area:ac;
+}
+
+div.sheet-prof label.sheet-wide,
+div.sheet-ac label.sheet-wide{
+  width: 96px;
+  padding: 0px;
 }
 
 /* speed SECTION */
@@ -314,40 +376,28 @@ div.sheet-saves{
 
 /* ammo SECTION */
 
-div.sheet-ammo{
+div.sheet-ammo.sheet-grid{
   grid-area:ammo;
-  display: flex;
+  display: grid;
+  grid-gap: 4px;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
 }
 
 /* attacks SECTION */
 
 div.sheet-attacks{
   grid-area:attacks;
+  display: grid;
+  grid-template-columns: 4fr repeat(4, 1fr) 2fr;
+  grid-template-rows: repeat(5, 1fr);
 }
 
+div.sheet-attacks .sheet-name{
+  padding-left: 20px;
+}
 
-/*       ATTR template     */
-div.sheet-hp-ac{
-  grid-area: hp-ac;
-}
-div.sheet-hp-ac div.sheet-hp{
-  background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Ambition_Avarice/images/hp.png); 
-  background-size: 220px 110px;
-  background-repeat: no-repeat;
-  width: 220px;
-  height: 110px;
-}
-div.sheet-hp-ac div.sheet-to-hit{
-  background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Ambition_Avarice/images/to-hit.png); 
-  background-size: 100px 110px;
-  background-repeat: no-repeat;
-  width: 100px;
-  height:110px;
-}
-div.sheet-hp-ac div.sheet-ac{
-  background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Ambition_Avarice/images/ac.png); 
-  background-size: 100px 110px;
-  background-repeat: no-repeat;
-  width: 100px;
-  height: 110px;
+div.sheet-attacks div button,
+div.sheet-attacks div input[type="text"]{
+ height: 20px;
 }
