--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -2213,7 +2213,7 @@ input[name="attr_inventory_item_carried"][value="1"] ~ span.sheet-item-weight-to
     height: 16px;
 }
 
-.sheet-spells .sheet-col0 { width: calc(100% - 700px); }
+.sheet-spells .sheet-col0 { width: calc(100% - 656px); }
 .sheet-spells .sheet-col0 input { text-align:left; }
 .sheet-spells .sheet-col1 { width: 25px; }
 .sheet-spells .sheet-col1 input { text-align:left; }
@@ -2233,9 +2233,13 @@ input[name="attr_inventory_item_carried"][value="1"] ~ span.sheet-item-weight-to
     margin-left: -80px;
 }
 
-.sheet-spells .sheet-row-stats .sheet-col0 { margin-left: 44px; width: calc(100% - 748px); }
+.sheet-spells .sheet-row-stats .sheet-col0 { margin-left: 44px; width: calc(100% - 703px); }
 
 .sheet-spells .sheet-row-college .sheet-col0 { margin-left: 44px; width: calc(100% - 703px); }
+
+.sheet-spells .sheet-spell-mod-notes {
+    width: calc(100% - 589px);
+}
 
 /* -- if edit mode, hide toggle notes -- */
 .sheet-spells .repcontainer.ui-sortable.editmode .sheet-checkbox,
@@ -2249,7 +2253,7 @@ input[name="attr_inventory_item_carried"][value="1"] ~ span.sheet-item-weight-to
 }
 
 .sheet-spells .sheet-row-details.sheet-notebox {
-    height: 318px;
+    height: 444px;
     padding: 0 4px;
 }
 
