--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -337,6 +337,7 @@ input {
 }
 
 .sheet-box .sheet-row-details2,
+.sheet-box .sheet-melee-notebox,
 .sheet-box .sheet-ranged-notebox {
     background: #FAFAFA;
 }
@@ -464,16 +465,35 @@ input.sheet-tab0 + span {
     display: none; 
 }
 
+.sheet-toggle:checked ~ .sheet-melee-notebox {
+    display: inline-block;
+    padding-bottom: 5px;
+    width: 100%;
+    height: 141px;
+}
+
 .sheet-toggle:checked ~ .sheet-ranged-notebox {
     display: inline-block;
     padding-bottom: 5px;
     width: 100%;
+    height: 163px;
 }
 
+.sheet-toggle ~ .sheet-melee-notebox,
 .sheet-toggle ~ .sheet-ranged-notebox { 
     display: none; 
 }
 
+.sheet-melee-notebox textarea.sheet-chat-size,
+.sheet-ranged-notebox textarea.sheet-chat-size {
+    width: 178px;
+    height: 55px;
+}
+
+.sheet-melee-notebox .sheet-popup,
+.sheet-ranged-notebox .sheet-popup {
+    font-weight: bold;
+}
 
 /*
 .sheet-box .sheet-row-details2:hover,
@@ -1761,6 +1781,10 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
 .sheet-melee-attacks .sheet-header .sheet-col5 { width: 52px; }
 .sheet-melee-attacks .sheet-row-stats .sheet-col0 { margin-left: 48px; width: calc(100% - 301px); }
 
+.sheet-melee-attacks .sheet-custom-checkbox label {
+    font-size: 12px;
+}
+
 /* -- highlight row -- */
 .sheet-melee-attacks .repcontainer.ui-sortable.editmode .sheet-toggle-highlight {
     opacity: 0;
@@ -1780,8 +1804,17 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
     left: 22px;
 }
 
+.sheet-melee-attacks .sheet-reason-for-mod {
+    width: calc(100% - 162px);
+}
+
+.sheet-melee-attacks .sheet-reason-for-mod input {
+    text-align: left;
+}
+
 .sheet-melee-attacks input.sheet-toggle-highlight[type="checkbox"]:checked ~ .sheet-row-stats,
 .sheet-melee-attacks input.sheet-toggle-highlight[type="checkbox"]:checked ~ .sheet-row-details2,
+.sheet-melee-attacks input.sheet-toggle-highlight[type="checkbox"]:checked ~ .sheet-melee-notebox,
 .sheet-melee-attacks input.sheet-toggle-highlight[type="checkbox"]:checked ~ .sheet-ranged-notebox {
     background: #B7FFAA;    
 }
@@ -1825,6 +1858,14 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
     line-height: 22px;
 }
 
+.sheet-ranged-attacks .sheet-reason-for-mod {
+    width: calc(100% - 162px);
+}
+
+.sheet-ranged-attacks .sheet-reason-for-mod input {
+    text-align: left;
+}
+
 /* -- highlight row -- */
 .sheet-ranged-attacks .repcontainer.ui-sortable.editmode .sheet-toggle-highlight {
     opacity: 0;
@@ -1846,6 +1887,7 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
 
 .sheet-ranged-attacks input.sheet-toggle-highlight[type="checkbox"]:checked ~ .sheet-row-stats,
 .sheet-ranged-attacks input.sheet-toggle-highlight[type="checkbox"]:checked ~ .sheet-row-details2,
+.sheet-ranged-attacks input.sheet-toggle-highlight[type="checkbox"]:checked ~ .sheet-melee-notebox,
 .sheet-ranged-attacks input.sheet-toggle-highlight[type="checkbox"]:checked ~ .sheet-ranged-notebox {
     background: #B7FFAA;    
 }
@@ -1858,6 +1900,10 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
     width: 87px;
     margin-left: 4px;
     text-align: left;
+}
+
+.sheet-ranged-notebox .sheet-col-row-id {
+    width: 45px;
 }
 
 .sheet-ranged-notebox .sheet-col-input {
