--- a/SavageWorlds-Tabbed/SWTRedesign.css
+++ b/SavageWorlds-Tabbed/SWTRedesign.css
@@ -2727,7 +2727,7 @@ span.sheet-vehiclesT {
     display: inline-block;
 }
 
-/*---  IZ 2.0 Strain ---*/
+/*---  IZ Strain ---*/
 
 .sheet-strain {
     text-align: center;
@@ -2749,31 +2749,7 @@ span.sheet-vehiclesT {
 	font-weight: bold;
 }
 
-/*--- End IZ 2.0 Strain ---*/
-
-/*---  IZ 3.0 Strain ---*/
-
-.sheet-strainthree {
-    text-align: center;
-}
-
-.charsheet .sheet-dangerthree,
-.charsheet .sheet-criticalthree {
-	display: none;
-}
-
-.charsheet input.sheet-dangerthree:checked ~ input.sheet-strainthree {
-	background: #e8a400;
-	font-weight: bold;
-}
-
-.charsheet input.sheet-criticalthree:checked ~ input.sheet-strainthree {
-	background: #e93a41;
-	color: white;
-	font-weight: bold;
-}
-
-/*--- End  IZ 3.0 Strain ---*/
+/*--- End IZ Strain ---*/
 
 /*--- Derived Stats ---*/
 .sheet-useFame:checked + .sheet-Fame,
