--- a/Warhammer 4e Character Sheet/Warhammer 4e Character Sheet.css
+++ b/Warhammer 4e Character Sheet/Warhammer 4e Character Sheet.css
@@ -5,6 +5,7 @@
 .sheet-overall-wrapper {
 	min-width: 850px;
 	max-width: 850px;
+	min-height: 1000px;
 }
 .charsheet {
 	padding: 0  3px 3px !important;
