Stargate: v0.2; image, minor ajustments

--- a/Stargate-RPG/stargate.css
+++ b/Stargate-RPG/stargate.css
@@ -37,6 +37,11 @@ h3{
   width: 50px;
 }
 
+.sheet-txtcenter{
+  text-align: center;
+}
+
+
 /* --------- Inputs ------------- */
 
 input[type="text"] {
@@ -309,6 +314,7 @@ div.sheet-saves span.sheet-mod{
 
 div.sheet-skills{
   grid-area:skills;
+  padding-left: 10px;
 }
 
 div.sheet-skills div{
@@ -318,6 +324,10 @@ div.sheet-skills div{
 div.sheet-skills span:not(.sheet-mod),
 div.sheet-condition span{
   text-transform: uppercase;
+}
+
+div.sheet-skills .sheet-mod{
+  margin: 0px 4px 0px 4px; 
 }
 
 /* hp SECTION */
