Stargate: v0.21; minor visual

--- a/Stargate-RPG/stargate.css
+++ b/Stargate-RPG/stargate.css
@@ -237,8 +237,7 @@ button[type="roll"].sheet-d6{
 
 div.sheet-character {
   display: grid;
-  grid-gap: 4px;
-  grid-template-columns: 2fr 4fr 3fr 3fr;
+  grid-template-columns: 4fr 8fr 5fr 6fr;
   grid-template-rows: repeat(5, 2fr) 5fr 4fr;
   grid-template-areas:"name name    name    name     " 
                       "attr skills  hp      condition"
@@ -253,7 +252,7 @@ div.sheet-character {
   background-repeat: no-repeat;
   background-size: 700px 700px;
   background-position: center;
-  background-color: grey;
+  background-color: black;
 }
 
 div.sheet-journal {
@@ -276,6 +275,8 @@ div.sheet-config {
 /* NAME SECTION */
 div.sheet-name{
   grid-area: name;
+  padding: 5px 0px 0px 0px;
+  margin: 5px;
 }
 
 /* ATTRS SECTION */
@@ -297,7 +298,10 @@ div.sheet-skills span:not(.sheet-mod){
   text-transform: uppercase;
 }
 
-div.sheet-attr span.sheet-mod,
+div.sheet-attr span:not(.sheet-mod){
+  font-size: 1.5em;
+}
+
 div.sheet-skills span.sheet-mod,
 div.sheet-prof span.sheet-mod,
 div.sheet-saves span.sheet-mod{
@@ -309,12 +313,30 @@ div.sheet-saves span.sheet-mod{
   text-align: center;
 }
 
+div.sheet-attr span.sheet-mod{
+  width: 25px;
+  margin-top: 4px;
+  border-style: none;
+  margin-bottom: 12px;
+  border-width: 2px;
+  text-align: center;
+  font-weight: bold;
+}
+
+div.sheet-attr input[type="number"]{
+  width: 2em;
+  margin-bottom: 7px;
+  border-style: none;
+  font-weight: bold;
+  font-size: 1.5em;
+}
 
 /* skills SECTION */
 
 div.sheet-skills{
   grid-area:skills;
   padding-left: 10px;
+  margin: 10px 10px 5px 5px;
 }
 
 div.sheet-skills div{
@@ -336,17 +358,33 @@ div.sheet-hp{
   grid-area:hp;
 }
 
+div.sheet-hp > div:nth-child(2) {
+  width: 100px;
+}
+
+
 div.sheet-hp div,
 div.sheet-prof div,
 div.sheet-ac div,
 div.sheet-speed div{
-  flex-grow: 1;
+  flex-grow: .4;
+  margin: 5px;
+}
+
+div.sheet-hp label,
+div.sheet-prof label,
+div.sheet-ac label,
+div.sheet-speed label{
+  font-size: 1.1em;
+  font-weight: bold;
 }
 
 /* condition SECTION */
 
 div.sheet-condition{
   grid-area:condition;
+  padding-left: 10px;
+  margin: 8px 25px 8px 4px; 
 }
 
 div.sheet-condition span{
@@ -360,6 +398,29 @@ div.sheet-prof{
   grid-area:prof;
 }
 
+div.sheet-prof > div:nth-child(1) > label:nth-child(1){
+  width: 80px;
+}
+
+div.sheet-prof > div:nth-child(2) > label:nth-child(1) {
+ padding: 0px;
+}
+
+
+div.sheet-prof .sheet-moxie{
+  width: 50px;
+}
+
+.sheet-prof > div:nth-child(2) > label:nth-child(1) {
+  width: 56px;
+}
+
+
+div.sheet-moxie > label:nth-child(1) {
+  width: 54px;
+}
+
+
 /* ac SECTION */
 
 div.sheet-ac{
@@ -372,16 +433,27 @@ div.sheet-ac label.sheet-wide{
   padding: 0px;
 }
 
+
 /* speed SECTION */
 
 div.sheet-speed{
   grid-area:speed;
 }
 
+
 /* saves SECTION */
 
 div.sheet-saves{
   grid-area:saves;
+  margin: 5px 20px 5px 5px;
+}
+
+div.sheet-saves div{
+  padding-left: 8px;
+}
+
+div.sheet-saves span.sheet-mod{
+  margin: 0px 4px; 
 }
 
 /* ammo SECTION */
@@ -389,10 +461,21 @@ div.sheet-saves{
 div.sheet-ammo.sheet-grid{
   grid-area:ammo;
   display: grid;
-  grid-gap: 4px;
+  grid-gap: 8px;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
+  padding: 5px 20px 5px 0px;
 }
+
+div.sheet-ammo label{
+  text-align: center;
+  padding: 0px;
+}
+
+div.sheet-ammo div{
+  margin: 7px 1px 7px 1px;
+}
+
 
 /* attacks SECTION */
 
@@ -401,13 +484,18 @@ div.sheet-attacks{
   display: grid;
   grid-template-columns: 4fr repeat(4, 1fr) 2fr;
   grid-template-rows: repeat(5, 1fr);
+  margin: 0px 20px 10px 5px;
 }
 
 div.sheet-attacks .sheet-name{
   padding-left: 20px;
 }
 
-div.sheet-attacks div button,
+div.sheet-attacks span{
+  height: 25px;
+}
+
+div.sheet-attacks div button[type="roll"],
 div.sheet-attacks div input[type="text"]{
  height: 20px;
 }
