--- a/Palladium Fantasy 1E/palladium_fantasy_1e.css
+++ b/Palladium Fantasy 1E/palladium_fantasy_1e.css
@@ -227,7 +227,8 @@ button[type=roll].sheet-rolldice::before {
 .sheet-wealth-field, .sheet-bonus-field, .sheet-occ-field, .sheet-skill-notes, .sheet-elective-field, 
 .sheet-secondary-field, .sheet-mystic-field, .sheet-melee-field, .sheet-ranged-field, 
 .sheet-combat-field, .sheet-combat-textarea, .sheet-save-field, .sheet-notes-field, .sheet-notes-textarea, 
-.sheet-weight-box, .sheet-weightsub-box, .sheet-whisper-select, .sheet-mattack-text, .sheet-rattack-text{
+.sheet-weight-box, .sheet-weightsub-box, .sheet-whisper-select, .sheet-mattack-text, .sheet-rattack-text, 
+.sheet-save-misc{
     background-color:#ebebeb;
 }
 .sheet-fraction-grid-container{
@@ -494,6 +495,14 @@ button[type=roll].sheet-savedice::before {
 .sheet-savedice{
     color: #ebebeb;
     background: #6b8a76;
+}
+.sheet-save-notes-container{
+    display:grid;
+    grid-template-columns: 500px 30px
+}
+.sheet-save-misc{
+    max-width:500px;
+    max-height:60px;
 }
 .sheet-underline{
     text-decoration: underline;
