Forbidden Lands v1.59 update
- Fixed Shield Parry and Shove bug.
- Changed weapon Max bonus to a selector 0-12. Reminder that this is the weapon's undamaged bonus. Adjust weapon Bon to account for a broken state.

--- a/Forbidden_Lands/Forbidden_Lands.css
+++ b/Forbidden_Lands/Forbidden_Lands.css
@@ -802,11 +802,13 @@ input.sheet-expand~.sheet-input-textarea {
 input.sheet-expand:checked~.sheet-input-textarea {
   line-height: 1.2em;
   display: block;
-  overflow: hidden;
   box-sizing: border-box;
   height: 4.5em;
   min-height: 2em;
+  margin: 0;
   border: 2px dotted #c3996b;
+  overflow: hidden;
+  overflow-y: auto;
 }
 
 /* character grid layout */
@@ -816,7 +818,7 @@ input.sheet-expand:checked~.sheet-input-textarea {
   margin: -10px 0 0 0;
   grid-column-gap: 4px;
   grid-row-gap: 4px;
-  grid-template-columns: 35% auto auto;
+  grid-template-columns: 35% auto 27%;
 }
 
 .sheet-box {
