--- a/Emberwind/emberwind.css
+++ b/Emberwind/emberwind.css
@@ -36,7 +36,7 @@
 }
 
 input.sheet-tab-button{
-    height:21px;
+    height: 21px;
     opacity: 0;
     z-index: 2;
 }
@@ -285,7 +285,7 @@ div.sheet-tab-content {
     background-position-x: 0;
     background-size: 100% 100%;
     background-repeat: no-repeat;
-    background-image: url('https://tchol.org/images/red-grunge-png-1.png')
+    background-image: url("https://raw.githubusercontent.com/lexibrown/emberwind-test/master/images/guide.png");
 }
 
 .sheet-guide-header-big {
@@ -299,7 +299,7 @@ div.sheet-tab-content {
 }
 
 .sheet-guide-p {
-    background: -webkit-linear-gradient(130deg, lightcoral 65%, lightskyblue 50%);
+    background: -webkit-linear-gradient(130deg, #FEB8AE 65%, #B8DCF9 50%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
@@ -401,19 +401,19 @@ div.sheet-tab-content {
 .sheet-info {
     grid-area: info;
     height: auto;
-    border: 3px solid lightcoral;
+    border: 3px solid #EE5F57;
 }
 
 .sheet-info-hp-box {
     width: 45%;
     padding-top: 5px;
     padding-bottom: 4px;
-    border-right: 3px solid lightcoral;
-    border-bottom: 3px solid lightcoral;
+    border-right: 3px solid #EE5F57;
+    border-bottom: 3px solid #EE5F57;
 }
 
 .sheet-info-hp-text {
-    background-color: lightcoral;
+    background-color: #EE5F57;
     color: white;
     font-weight: bold;
     padding: 10px 5px 10px 5px;
@@ -439,6 +439,15 @@ input.sheet-medium {
 .sheet-info-subclass-box {
     width: 65%;
     padding-left: 5px;
+}
+
+.sheet-info-custom-class {
+    padding: 2px 0 2px 5px;
+    display: none;
+}
+
+.sheet-class-control[value="custom"] ~ .sheet-info-custom-class {
+    display: block;
 }
 
 /*----------------- Aspects section ------------------*/
@@ -700,7 +709,7 @@ input.sheet-medium {
 }
 
 .sheet-action-tide-centered {
-    background-color: rgb(247, 213, 178);
+    background-color: #FEE9D4;
     text-align: center;
     display: flex;
     justify-content: center;
@@ -709,14 +718,14 @@ input.sheet-medium {
 }
 
 .sheet-action-tide-leftCentered {
-    background-color: rgb(247, 213, 178);
+    background-color: #FEE9D4;
     display: flex;
     align-items: center;
     padding: 3px;
 }
 
 .sheet-action-tide-text {
-    background-color: rgb(247, 213, 178);
+    background-color: #FEE9D4;
     text-align: center;
     padding: 3px;
 }
@@ -819,19 +828,19 @@ input.sheet-action-description-indicator[value="2"] ~ .sheet-action-auto-hit-des
 /*----------------- Colours ------------------*/
 
 .sheet-red {
-    background-color: lightcoral;
+    background-color: #FEB8AE;
 }
 
 .sheet-blue {
-    background-color: lightskyblue;
+    background-color: #B8DCF9;
 }
 
 .sheet-green {
-    background-color: lightgreen;
+    background-color: #BAE0CB;
 }
 
 .sheet-yellow {
-    background-color: yellow;
+    background-color: #FDD5B0;
 }
 
 .sheet-red .sheet-blue .sheet-green .sheet-yellow {
@@ -844,7 +853,7 @@ input.sheet-action-description-indicator[value="2"] ~ .sheet-action-auto-hit-des
 }
 
 .sheet-lightgrey {
-    background-color: lightgrey;
+    background-color: #E7E8EA;
 }
 
 .sheet-dimgrey {
@@ -856,7 +865,7 @@ input.sheet-action-description-indicator[value="2"] ~ .sheet-action-auto-hit-des
 }
 
 .sheet-purple {
-    background-color: #c99fd6;
+    background-color: #E5DCED;
 }
 
 .sheet-red-text {
@@ -896,16 +905,16 @@ input.sheet-cap {
 /*----------------- CAP Check ------------------*/
 
 .sheet-critical {
-    border: 5px solid lightcoral;
+    border: 5px solid #FEB8AE;
 }
 
 .sheet-accuracy {
-    border: 5px solid lightgreen;
+    border: 5px solid #BAE0CB;
 }
 
 .sheet-penetration {
     border: 5px solid;
-    border-image: linear-gradient(to bottom, lightskyblue 50%, lightcoral 50%, lightcoral 50%) 5;
+    border-image: linear-gradient(to bottom, #B8DCF9 50%, #FEB8AE 50%, #FEB8AE 50%) 5;
 }
 
 .sheet-cap-main-col {
@@ -1038,7 +1047,7 @@ input.sheet-cap {
 }
 
 .sheet-border-red {
-    border: 3px solid lightcoral;
+    border: 3px solid #EE5F57;
 }
 
 input.sheet-custom-number-input::-webkit-outer-spin-button,
@@ -1338,6 +1347,47 @@ input[type=checkbox].sheet-tab-hide:checked ~ .sheet-show-hide {
     display: none;
 }
 
+/*----------------- Expandable textarea ------------------*/
+
+.sheet-auto-expand {
+    position: relative;
+    min-height: 18px;
+    cursor: text;
+    word-wrap: break-word;
+    border-radius: 2px;
+    padding: 2px;
+}
+
+.sheet-auto-expand span {
+    visibility: hidden;
+    white-space: pre-wrap;
+    display: block;
+}
+
+.sheet-auto-expand textarea {
+    position: absolute;
+    z-index: 0;
+    top: 0;
+    left: 0;
+    margin: 0;
+    overflow: hidden;
+    resize: none;
+    height: 100%;
+    width: 100%;
+    display: block;
+    box-sizing: border-box;
+    background: transparent;
+    border: none;
+    border-radius: 2px;
+    box-shadow: none;
+    color: inherit;
+    font: inherit;
+    letter-spacing: inherit;
+    padding: inherit;
+    text-align: inherit;
+    text-transform: inherit;
+}
+
 /*-----------------  ------------------*/
 
 .sheet-top-detail {
@@ -1523,7 +1573,7 @@ input[type=checkbox].sheet-tab-hide:checked ~ .sheet-show-hide {
     font-family: dicefontd6;
     position: absolute;
     z-index: 3;
-    color: #845a91;
+    color: #9E76B3;
 }
 
 div.sheet-enemy-hex {
@@ -1532,47 +1582,80 @@ div.sheet-enemy-hex {
 
 .sheet-grunt {
     padding-top: 50px;
+    width: 390px;
+    height: 330px;
+    margin-top: -30px;
 }
 
 .sheet-awakened {
-    padding-top: 25px;
+    padding-top: 75px;
+    padding-left: 40px;
+    height: 480px;
+    width: 690px;
+    margin-top: -5px;
 }
 
 .sheet-elite {
-
+    padding-left: 40px;
+    height: 580px;
+    width: 690px;
+    margin-top: -25px;
 }
 
 .sheet-boss {
-
+    padding-left: 40px;
+    height: 680px;
+    width: 790px;
+    margin-top: -25px;
 }
 
-input.sheet-grunt:checked ~ div.sheet-grunt,
-input.sheet-awakened:checked ~ div.sheet-awakened,
-input.sheet-elite:checked ~ div.sheet-elite,
-input.sheet-boss:checked ~ div.sheet-boss {
+.sheet-npc-ring-indicator[value="1"] ~ div.sheet-grunt,
+.sheet-npc-ring-indicator[value="2"] ~ div.sheet-awakened,
+.sheet-npc-ring-indicator[value="3"] ~ div.sheet-elite,
+.sheet-npc-ring-indicator[value="4"] ~ div.sheet-boss {
     display: block;
 }
 
-input[type=checkbox].sheet-hex-button:checked ~ .sheet-hex.sheet-veteran-hex-1.sheet-inner + textarea,
+/*------------- Hex colours ------------------*/
+
+.sheet-hex.sheet-hex-4, .sheet-small-hex.sheet-hex-4 { background: #F8F6FA; }
+.sheet-hex.sheet-hex-3, .sheet-small-hex.sheet-hex-3 { background: #ECE5F1; }
+.sheet-hex.sheet-hex-2, .sheet-small-hex.sheet-hex-2 { background: #D5C6E1; }
+.sheet-hex.sheet-hex-1, .sheet-small-hex.sheet-hex-1 { background: #B698C7; }
+.sheet-hex.sheet-hex-0, .sheet-small-hex.sheet-hex-0 { background: #9E76B3; }
+
+.sheet-hex.sheet-veteran-hex-4, .sheet-small-hex.sheet-veteran-hex-4 { background: #FABEAF; }
+.sheet-hex.sheet-veteran-hex-3, .sheet-small-hex.sheet-veteran-hex-3 { background: #FABEAF; }
+.sheet-hex.sheet-veteran-hex-2, .sheet-small-hex.sheet-veteran-hex-2 { background: #F9B09F; }
+.sheet-hex.sheet-veteran-hex-1, .sheet-small-hex.sheet-veteran-hex-1 { background: #F69E8C; }
+
+/*------------- Hexes ------------------*/
+
+input[type=checkbox].sheet-hex-button:checked ~ .sheet-hex.sheet-veteran-hex-1,
 input[type=checkbox].sheet-hex-button:checked ~ .sheet-hex.sheet-veteran-hex-2,
 input[type=checkbox].sheet-hex-button:checked ~ .sheet-hex.sheet-veteran-hex-3,
-input[type=checkbox].sheet-hex-button:checked ~ .sheet-hex.sheet-hex-1,
-input[type=checkbox].sheet-hex-button:checked ~ .sheet-hex.sheet-hex-2,
-input[type=checkbox].sheet-hex-button:checked ~ .sheet-hex.sheet-hex-3 {
+input[type=checkbox].sheet-hex-button:checked ~ .sheet-hex.sheet-veteran-hex-4,
+input[type=checkbox].sheet-small-hex-button:checked ~ .sheet-small-hex.sheet-veteran-hex-1,
+input[type=checkbox].sheet-small-hex-button:checked ~ .sheet-small-hex.sheet-veteran-hex-2,
+input[type=checkbox].sheet-small-hex-button:checked ~ .sheet-small-hex.sheet-veteran-hex-3,
+input[type=checkbox].sheet-small-hex-button:checked ~ .sheet-small-hex.sheet-veteran-hex-4 {
     background-color: transparent;
 }
 
-input[type=checkbox].sheet-hex-button:checked + span::before {
+input[type=checkbox].sheet-hex-button:checked + span::before,
+input[type=checkbox].sheet-small-hex-button:checked + span::before {
     content: "&";
     font-family: pictos;
     color: green;
 }
 
-input[type=checkbox].sheet-hex-button:hover + span + div {
+input[type=checkbox].sheet-hex-button:hover + span + div,
+input[type=checkbox].sheet-small-hex-button:hover + span + div {
     background-color: indianred;
 }
 
-.sheet-hex-button + span::before {
+.sheet-hex-button + span::before,
+.sheet-small-hex-button + span::before {
     cursor: pointer;
     content: "*";
     font-family: pictos;
@@ -1583,7 +1666,7 @@ input[type=checkbox].sheet-hex-button:hover + span + div {
 input[type=checkbox].sheet-hex-button {
     opacity: 0;
     z-index: 3;
-    margin-left: -60px;
+    margin-left: -55px;
 }
 
 .sheet-hex {
@@ -1600,22 +1683,10 @@ input[type=checkbox].sheet-hex-button {
     zoom: 1;
 }
 
-.sheet-hex.sheet-hex-gap {
-    margin-left: 86px;
-}
-
-.sheet-hex a {
-    display: block;
-    width: 100%;
-    height: 100%;
-    text-indent: -9999em;
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-
 .sheet-hex .sheet-corner-1,
-.sheet-hex .sheet-corner-2 {
+.sheet-hex .sheet-corner-2,
+.sheet-small-hex .sheet-corner-1,
+.sheet-small-hex .sheet-corner-2 {
     position: absolute;
     top: 0;
     left: 0;
@@ -1627,17 +1698,21 @@ input[type=checkbox].sheet-hex-button {
     backface-visibility: hidden;
 }
 
-.sheet-hex .sheet-corner-1 {
+.sheet-hex .sheet-corner-1,
+.sheet-small-hex .sheet-corner-1 {
     z-index:-1;
     transform: rotate(60deg);
 }
 
-.sheet-hex .sheet-corner-2 {
+.sheet-hex .sheet-corner-2,
+.sheet-small-hex .sheet-corner-2 {
     transform: rotate(-60deg);
 }
 
 .sheet-hex .sheet-corner-1::before,
-.sheet-hex .sheet-corner-2::before {
+.sheet-hex .sheet-corner-2::before,
+.sheet-small-hex .sheet-corner-1::before,
+.sheet-small-hex .sheet-corner-2::before {
     width: 173px;
     height: 173px;
     content: '';
@@ -1650,39 +1725,43 @@ input[type=checkbox].sheet-hex-button {
     backface-visibility: hidden;
 }
 
-.sheet-hex .sheet-corner-1::before {
+.sheet-hex .sheet-corner-1::before,
+.sheet-small-hex .sheet-corner-1::before {
     transform: rotate(-60deg) translate(-87px, 0px);
     transform-origin: 0 0;
 }
 
-.sheet-hex .sheet-corner-2::before {
+.sheet-hex .sheet-corner-2::before,
+.sheet-small-hex .sheet-corner-2::before {
     transform: rotate(60deg) translate(-48px, -11px);
     bottom: 0;
 }
 
 /* Custom styles*/
-.sheet-hex .sheet-inner { color: #eee; }
-
-.sheet-hex hr {
-    border: 0;
-    border-top: 1px solid #eee;
-    width: 60%;
-    margin: 15px auto;
+.sheet-hex .sheet-inner,
+.sheet-small-hex .sheet-inner {
+    color: #eee;
 }
 
-.sheet-hex p {
-    font-size: 16px;
-    font-family: 'Kotta One', serif;
-    width: 80%;
-    margin: 0 auto;
+/*------------- Small hexes ---------------*/
+
+input[type=checkbox].sheet-small-hex-button {
+    opacity: 0;
+    z-index: 3;
+    margin-left: -45px;
 }
 
-.sheet-hex.sheet-hex-1 { background: #c99fd6; }
-.sheet-hex.sheet-hex-2 { background: #a16fb0; }
-.sheet-hex.sheet-hex-3 { background: #845a91; }
-
-.sheet-hex.sheet-veteran-hex-1 { background: lightcoral; }
-.sheet-hex.sheet-veteran-hex-2 { background: coral; }
-.sheet-hex.sheet-veteran-hex-3 { background: chocolate; }
-
+.sheet-small-hex {
+    width: 75px;
+    height: 43px;
+    background-color: #ccc;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: auto 173px;
+    position: relative;
+    float: left;
+    margin: 13px 2px;
+    text-align: center;
+    zoom: 1;
+}
 
