Forbidden Lands v1.59 update (#5792)
* Forbidden Lands v1.55

* Forbidden Lands v1.55

* Forbidden Lands v1.55

* Forbidden Lands v1.56

- fixed base dice being capped in the dice pool at "6" instead of "12".

* Forbidden Lands v1.57 update

- "Dice Only" tab has been removed.
- Monster skills that are "strength-based" now have their own attributes on the monster tab's listed skills. (crafting_monster, endurance_monster melee_monster, and might_monster) This will allow the GM to enter a value 0-12 of base dice that will be used to update the dice pool when selected.
- Added additional damage tracking (toggleable feature) for Monster's up to Strength 48. Here be Dragons...
- Max values for primary attributes are equal to the primary attribute value(auto-calculated). ie strength_tolal_max = strength. This can be useful for tracking the current attribute value using a token bar/bubble. Example; linking strength_total will use the max value of strength_total|max.

* Forbidden Lands v1.58 update

- added a Settings tab.
- added global whisper options for the sheet as well as the API roller (@{whisper_option} and @{whisper_option_api}).
- added a "Parry" roll(dice pool preset) to repeating weapons.
- added a Pride roll that rolls a Legendary d12 and displays the character's pride.
- added borders/backgrounds similar to the Forbidden Lands style/theme.
- added title text to each condition.
- fixed a bug in the "Clear Dice Pool" that sometimes left dice in the pool.

* Forbidden Lands v1.59 update

- Fixed Shield Parry and Shove bug.
- Changed weapon Max bonus to a selector 0-12. Reminder that this is the weapon's undamaged bonus. Adjust weapon Bon to account for a broken state.

--- a/Forbidden_Lands/Forbidden_Lands.css
+++ b/Forbidden_Lands/Forbidden_Lands.css
@@ -56,7 +56,7 @@ input.sheet-announcements-older-show:hover+span {
   border-left-color: #a60100;
 }
 
-input.sheet-announcements-older-show+span{
+input.sheet-announcements-older-show+span {
   position: relative;
   float: right;
   width: 0;
@@ -108,8 +108,8 @@ input.sheet-monster_only:checked~div.sheet-character input[type="checkbox"].shee
   margin: -40px 5px 0 -3px;
 }
 
-input.sheet-monster_only:checked~div.sheet-character input[type="checkbox"].sheet-extra-damage-show:not(:checked) ~ .sheet-extra-damage-show,
-input.sheet-monster_only:checked~div.sheet-character input[type="checkbox"].sheet-extra-damage-show:not(:checked) ~ .sheet-extra-damage-show+::before {
+input.sheet-monster_only:checked~div.sheet-character input[type="checkbox"].sheet-extra-damage-show:not(:checked)~.sheet-extra-damage-show,
+input.sheet-monster_only:checked~div.sheet-character input[type="checkbox"].sheet-extra-damage-show:not(:checked)~.sheet-extra-damage-show+::before {
   display: none;
 }
 
@@ -802,11 +802,13 @@ input.sheet-expand~.sheet-input-textarea {
 input.sheet-expand:checked~.sheet-input-textarea {
   line-height: 1.2em;
   display: block;
-  overflow: hidden;
   box-sizing: border-box;
   height: 4.5em;
   min-height: 2em;
+  margin: 0;
   border: 2px dotted #c3996b;
+  overflow: hidden;
+  overflow-y: auto;
 }
 
 /* character grid layout */
@@ -816,7 +818,7 @@ input.sheet-expand:checked~.sheet-input-textarea {
   margin: -10px 0 0 0;
   grid-column-gap: 4px;
   grid-row-gap: 4px;
-  grid-template-columns: 35% auto auto;
+  grid-template-columns: 35% auto 27%;
 }
 
 .sheet-box {
@@ -1089,6 +1091,7 @@ input.sheet-dice_only:checked~div.sheet-character .sheet-box.sheet-character-ski
   align-self: flex-end;
   margin: 0 0 -40px 0;
 }
+
 /* raven image*/
 .sheet-heading-box7 {
   grid-column: 3;
